# week1

./: .coverage  .pre-commit-config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dataset_tools/: __init__.py  dummy_dataset.py
tests/: test_dummy_dataset.py
