[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "week1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mypy>=1.17.0",
    "pandas>=2.3.1",
    "pyarrow>=14.0.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=4.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pandas>=2.3.1",
    "pyarrow>=14.0.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=4.1.0",
    "pandas-stubs>=2.3.0.250703",
]

[tool.hatch.build.targets.wheel]
packages = ["dataset_tools"]

[tool.mypy]
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = [
    "--cov=dataset_tools",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
